# workspace-auth-middleware

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  TESTING_GUIDE.md  TODO.md  build_wheels.sh  check_credentials.sh  pyproject.toml  run_integration_tests.sh  workspace-auth.skill  workspace_auth_middleware-1.1.2a0-py3-none-any.whl  workspace_auth_middleware-1.1.3a0-py3-none-any.whl  workspace_auth_middleware-1.1.5a0-py3-none-any.whl  workspace_auth_middleware-1.1.6a0-py3-none-any.whl  workspace_auth_middleware-1.1.7a0-py3-none-any.whl  workspace_auth_middleware-1.2.0a0-py3-none-any.whl  workspace_auth_middleware-1.3.0a0-py3-none-any.whl  workspace_auth_middleware-1.4.0a0-py3-none-any.whl  workspace_auth_middleware-1.5.0a0-py3-none-any.whl  workspace_auth_middleware-2.0.0a0-py3-none-any.whl  workspace_auth_middleware-3.0.0a0-py3-none-any.whl  workspace_auth_middleware-3.1.0a0-py3-none-any.whl  workspace_auth_middleware-3.2.0a0-py3-none-any.whl  workspace_auth_middleware-3.3.0a0-py3-none-any.whl  workspace_auth_middleware-3.4.0a0-py3-none-any.whl  workspace_auth_middleware-3.4.1a0-py3-none-any.whl  workspace_auth_middleware-4.0.0-py3-none-any.whl  workspace_auth_middleware-4.0.0a0-py3-none-any.whl  workspace_auth_middleware-4.1.0-py3-none-any.whl
.benchmarks/: .gitignore
.benchmarks/Linux-CPython-3.12-64bit/: 0001_baseline.json
.claude/skills/workspace-auth/: SKILL.md
.claude/skills/workspace-auth/references/: admin-sdk.md  caching.md  session-auth.md
.github/workflows/: cloudbuild.yml  pythonupdates.yml
docs/: ARCHITECTURE.md  FASTAPI_INTEGRATION.md  SESSION_AUTHENTICATION.md  STARLETTE_INTEGRATION.md  STARLETTE_SESSION_IMPLEMENTATION.md  TESTING_GUIDE.md
examples/: README.md  authlib_fastapi_example.py  authlib_starlette_example.py  caching_example.py  manual_testing.py  setup_env.sh  starlette_session_example.py
skills/workspace-auth/: SKILL.md
skills/workspace-auth/references/: caching.md  session-auth.md
tests/: README.md  conftest.py  test_auth_backend.py  test_decorators.py  test_integration_adc.py  test_middleware.py  test_module.py  test_performance.py  test_testing.py
workspace_auth_middleware/: __init__.py  auth.py  decorators.py  middleware.py  models.py  pytest_plugin.py  testing.py
